--- a/sigin.html
+++ b/sigin.html
@@ -94,6 +94,15 @@ a{
 a:hover{
     text-decoration: underline;
 }
+        @media(min-width:380px){
+    .container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+  
+}
     </style>
     
 </head>
