--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <a href="#end2">about</a>
             <a href="#products">products</a>
             <a href="#member">members</a>
-            <a href="contact">contact</a>
+            <a href="contact.html">contact</a>
+            <a href="login.html">Login</a>
         </nav>
 
         <div class="icons">
@@ -168,7 +169,7 @@
       <div class="old"><br> <br> <br> <br> 
         <h3>🍰Craving a slice of heaven? Look no further! The Chef's Cake is your ultimate destination for delectable, handcrafted cakes that will transport you to a world of sweetness.🎂
             <br> <br> 
-            <h4>✨ Why Choose Chef's Cake?</h4>   <br> <br> 
+            <h4 id="h4">✨ Why Choose Chef's Cake?</h4>   <br> <br> 
             <h4>        🎨 Artistry in Every Bite: Our skilled bakers craft each cake with precision and creativity, turning desserts into edible masterpieces.
             </h4> <br>       
             <h4>        🌈 Diverse Flavors: From classic chocolate decadence to exotic fruit-infused delights, our menu offers a symphony of flavors to suit every palate.
@@ -185,13 +186,13 @@
  <div class="end">
     <div class="copy">
         <img src="chef.png">
-        <p>© 2021 Just Bake.
+        <p id="p">© 2021 Just Bake.
             All Rights Reserved</p>
     </div>
 
     <div class="copy">
-        <h3>The Chef's Cake</h3>
-        <p>From our oven to your doorstep, indulge in artisanal sweetness with every slice.</h4>
+        <h3 id="h5">The Chef's Cake</h3>
+        <p>From our oven to your doorstep,<br> indulge in artisanal sweetness with every slice.</h4>
 
     </div>
     <div class="copy">
